WIP: composer to vp-associations-selection

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "ext-curl": "*"
     },
     "require-dev": {
-        "unimapper/unimapper": "@dev",
+        "unimapper/unimapper": "dev-vp-associations-selection as 1.2.x-dev",
         "nette/tester": "~1.0",
         "mockery/mockery": "~0.9.0",
         "squizlabs/php_codesniffer": "~2.0"
