--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
             "homepage": "http://github.com/bauer01"
         }
     ],
+    "repositories": [
+        { "type": "vcs", "url": "https://github.com/vp/unimapper.git"}
+    ],
     "require": {
         "php": ">=5.4.0",
         "ext-curl": "*"
